# ShellMaster3

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
assets/: AppIcon.icns
src/: app.rs  assets.rs  constants.rs  i18n.rs  keybindings.rs  main.rs  router.rs  state.rs  theme.rs
src/components/: mod.rs
src/components/common/: button.rs  dialog.rs  icon.rs  input.rs  mod.rs  window_controls.rs
src/components/common/server_dialog/: helpers.rs  mod.rs
src/components/common/server_dialog/panels/: basic_info.rs  jump_host.rs  mod.rs  other_settings.rs  proxy_settings.rs
src/components/common/settings_dialog/: helpers.rs  mod.rs
src/components/common/settings_dialog/panels/: about.rs  connection.rs  keybindings.rs  mod.rs  monitor.rs  sftp.rs  sync.rs  system.rs  terminal.rs  theme.rs
src/components/common/snippets_dialog/: dialog.rs  mod.rs  state.rs
src/components/monitor/: detail_dialog.rs  disk_card.rs  load_card.rs  mod.rs  network_card.rs  system_card.rs  view.rs
src/components/sftp/: editor.rs  file_list.rs  folder_tree.rs  mod.rs  path_bar.rs  toolbar.rs  view.rs
src/components/sftp/new_file_dialog/: dialog.rs  mod.rs  state.rs
src/components/sftp/new_folder_dialog/: dialog.rs  mod.rs  state.rs
src/components/sftp/properties_dialog/: dialog.rs  mod.rs  state.rs
src/components/terminal/: mod.rs  view.rs
src/models/: connection.rs  known_hosts.rs  mod.rs  monitor.rs  server.rs  session.rs  settings.rs  snippets.rs
src/models/sftp/: mod.rs  state.rs  transfer.rs  types.rs
src/pages/: mod.rs
src/pages/connecting/: log_viewer.rs  mod.rs  page.rs  progress.rs
src/pages/home/: known_hosts_list.rs  mod.rs  page.rs  server_list.rs  sidebar.rs  snippets_list.rs  titlebar.rs
src/pages/session/: mod.rs  monitor_panel.rs  page.rs  session_layout.rs  session_sidebar.rs  sftp_panel.rs  sidebar.rs  tab_bar.rs  terminal_page.rs
src/services/: mod.rs  monitor.rs  sftp.rs  ssh.rs  storage.rs
src/services/sftp/: editor.rs  mod.rs  multi_channel.rs  operations.rs  service.rs
src/ssh/: client.rs  config.rs  connection.rs  connector.rs  error.rs  event.rs  handler.rs  manager.rs  mod.rs  proxy.rs  reconnect.rs  session.rs
src/state/: core.rs  mod.rs  sftp_navigation.rs  sftp_transfer.rs  terminal.rs  ui_state.rs
src/terminal/: batched_run.rs  colors.rs  keys.rs  mod.rs  renderer.rs  scroll_handle.rs  state.rs  terminal_bridge.rs
