[package]
name = "shellmaster3"
version = "0.1.0"
edition = "2021"
authors = ["ShellMaster Team"]
description = "SSH/SFTP 客户端"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
smallvec = "1.15.1"
chrono = "0.4"
rfd = "0.15"

# SSH 连接
russh = "0.55.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "fs"] }
thiserror = "2.0"
async-trait = "0.1"
once_cell = "1.21.3"

# 终端模拟
alacritty_terminal = "0.25"

# 日志
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SFTP
russh-sftp = "2.1"
futures = "0.3.31"
tokio-util = { version = "0.7.17", features = ["full"] }

[package.metadata.bundle]
name = "ShellMaster3"
identifier = "com.shellmaster.app"
version = "0.1.0"
icon = ["AppIcon.icns"]
resources = ["assets"]
copyright = "Copyright (c) 2024 ShellMaster Team. All rights reserved."
category = "Developer Tool"
short_description = "SSH/SFTP 客户端"
long_description = "一个现代化的 SSH 和 SFTP 客户端，提供终端访问和文件传输功能。"
